# libplatform

./: .gitignore  README.md
include/platform/: ascii.h  events.h  geometry.h  gl.h  types.h
src/: CMakeLists.txt  clock.h  config.h.in  events.h  geometry.h  glwindow.h
src/glx/: glxwindow.c
src/posix/: clock.c  sleep.c
src/win32/: clock.c  wglwindow.c
tests/: CMakeLists.txt  testutils.c  testutils.h
tests/platform_test/: main.c  test_clock.c  test_glwindow.c  test_types.c
